<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <LinearLayout
        android:id="@+id/sharedPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto" />

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notif"
            android:textSize="20sp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textSize="20sp"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnToyMusic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/toy_music"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btnTemperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temp"
            android:textSize="10sp"/>

        <Button
            android:id="@+id/btnLight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/light"
            android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>