<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/light_control"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tvLampState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lamp_off"
        android:textSize="20sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tvBrightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brightness_0"
        android:textSize="22sp"
        android:gravity="center"
        android:padding="16dp"/>

    <SeekBar
        android:id="@+id/seekBrightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0" />

    <Button
        android:id="@+id/btnSendBrightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_brightness"/>

</LinearLayout>